# beans-next

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  beans-next.croissant.json  conftest.py  datasheet.md  datasheet_roots.md  pyproject.toml  requirements-dev.txt  requirements.txt  roots.croissant.json
.github/workflows/: ci.yml  pre-commit.yml
beans_next/: __init__.py  cli.py
beans_next/api/: __init__.py  http_schemas.py  messages.py  types.py
beans_next/cache/: __init__.py  sqlite_kv.py  two_layer.py
beans_next/config/: __init__.py  eval_task.py  run_config.py
beans_next/datasets/: __init__.py  base.py  beans_next.py  beans_next_hub.py  beans_next_multiaudio.py  esp_data.py  hf.py  hf_birdset.py  hf_multiaudio.py  hf_streaming.py  polars.py  temp_beans_zero_esp_data.py  temp_beans_zero_examples.py
beans_next/judges/: __init__.py  base.py  bioacoustic_classification_v1.py  bioacoustic_counting_v1.py  bioacoustic_open_qa_v1.py  client.py  extraction_templates.py  http_schemas.py  predict_v1_extractor.py  predict_v1_judge.py  scorer.py
beans_next/metrics/: __init__.py  base.py  captioning.py  classification.py  dataset.py  detection.py
beans_next/models/: __init__.py  base.py  http.py
beans_next/post_process/: __init__.py  cleaners.py  parsers.py  pipeline.py
beans_next/prompts/: __init__.py  audio_tags.py  renderer.py
beans_next/registry/: __init__.py  beans_zero_core_test_row_counts.json  beans_zero_labels.json  beans_zero_max_duration_seconds.json  birdset_core_test_row_counts.json
beans_next/results/: __init__.py  gcs_upload.py  store.py
beans_next/runner/: __init__.py  _utils.py  batching.py  checkpoint.py  health.py  parallel.py  rescorer.py  runner.py
beans_next/scripts/: __init__.py  generate_pairs.py
configs/: test_hf_backend.yaml
configs/benchmarks/: beans_next_all_tiers_hf_openai_proxy_stub.yaml  beans_next_crow_description_af3_serve57203.yaml  beans_next_multiaudio_crow4way_af3_serve57180.yaml  beans_next_multiaudio_crow4way_af3_serve57180_debug1.yaml  beans_next_multiaudio_unseen_species_naturelm_v1_1_ckpt_1290000.yaml  beans_zero_core_af3.yaml  beans_zero_core_af3_esp_data.yaml  beans_zero_core_gemini.yaml  beans_zero_core_gemini_esp_data.yaml  beans_zero_core_gpt4o.yaml  beans_zero_core_gpt4o_esp_data.yaml  beans_zero_core_naturelm_v1_0.yaml  beans_zero_core_naturelm_v1_0_esp_data.yaml  beans_zero_core_naturelm_v1_1.yaml  beans_zero_core_naturelm_v1_1_checkpoint_template.yaml  beans_zero_core_naturelm_v1_1_ckpt_merged_variations_f0_v5.yaml  beans_zero_core_naturelm_v1_1_esp_data.yaml  beans_zero_core_qwen3_omni.yaml  beans_zero_core_qwen3_omni_esp_data.yaml  beans_zero_zf_indiv_af3.yaml  beans_zero_zf_indiv_af3_esp_data.yaml  birdset_core_af3_esp_data.yaml  birdset_core_gemini_esp_data.yaml  birdset_core_gpt4o_esp_data.yaml  birdset_core_qwen3_omni_esp_data.yaml  esc50_official_naturelm_v10_real.yaml  esc50_official_naturelm_v10_serve56627_esp_data.yaml  esc50_official_naturelm_v11_real.yaml  esc50_official_naturelm_v11_serve56631_esp_data.yaml  esc50_official_openai_proxy_gemini_real.yaml  esc50_official_openai_proxy_openai_real.yaml  esc50_official_openai_proxy_stub.yaml
configs/paper/: beans_zero_all_models.yaml  beans_zero_naturelm_side_by_side.yaml
docs/: beans_next_data_structures_authoritative.md  beans_next_dataset.md  beans_next_multiaudio_dataset.md  beans_next_multiaudio_decisions.md  evaluation_guide.md  extraction_map.md  fixtures_format.md  full_evaluation_pipeline.md  http_contract.md  index.html  judge_model_gemma4.md  llm_judge.md  naturelm_checkpoint_inventory.md  paper_workflow_iteration1.md  results_ingestion.md  slurm_model_server_endpoints.md
examples/local/: run_inference_local.sh
examples/servers/: README.md
examples/servers/af3/: README.md  pyproject.toml  requirements.txt  serve.py  serve.sh
examples/servers/naturelm-v1.0/: README.md  inference.yml  pyproject.toml  requirements-gpu.txt  requirements.txt  serve.py  serve.sh
examples/servers/naturelm-v1.1/: README.md  pyproject.toml  requirements.txt  serve.py  serve.sh  smoke_real_one.py
examples/servers/vllm/: README.md  adapter.py  pyproject.toml  qwen3_omni_moe_instruct_text_single_h100.yaml  qwen3_omni_moe_thinking_single_h100.yaml  requirements.txt  serve.sh
examples/slurm/: AGENT_MODEL_SERVE_EVAL_PROMPTS.md  (+44 more)
my_dummy_library/: linear.py  nnet.py
scripts/: _check_launcher.py  _i1x_core_e2e.sh  beans_zero_sync_unseen_label_vocab.py  birdset_sync_scientific_labels.py  build_core_suite_results_tables.py  check_launcher.py  check_launcher.sh  collect_beans_zero_core_fixtures.py  consolidate_beans_zero_results.py  ingest_and_rescore.sh  publish_beans_next_multiaudio_hf.py  repro_pygilstate_release.py  reproduce.sh  reproduce_all.sh  run_esc50_official_openai_proxy_stub.sh  run_selected_samples.py  simple_predict.py  slurm_naturelm_run.sh  smoke_test.sh  sweep_naturelm_checkpoints.sh  sync_beans_next_results_to_gcs.sh  validate_run_dir.sh  with_uvicorn.py
tests/: test_beans_next_dataset.py  test_beans_next_datasets.py  test_beans_next_hub_parquet_coercion.py  test_classification_detection_metrics.py  test_detection_label_postprocess.py  test_esp_data_backend_optional.py  test_eval_improvements.py  test_eval_task_config.py  test_fixtures_beans_zero_slice.py  test_fixtures_beans_zero_slice_golden.py  test_generate_pairs.py  test_hf_metadata.py  test_hf_multiaudio_loader.py  test_http_client_retry_policy.py  test_i13_esc50_prep_artifacts.py  test_i14_suite_registry.py  test_ingestion_scripts.py  test_judge_runner_integration.py  test_judge_scorer.py  test_launcher_stubs.py  test_metric_fixes.py  test_naturelm_v11_info_identity.py  test_naturelm_v1_0_prompt_normalization.py  test_polars_loader.py  test_rescorer_from_pairs_fixture.py  test_resume_and_workers.py  test_run_config_loader.py  test_runner_prompt_render_error_is_sample_level.py  test_scientific_name_postprocess.py  test_score_from_file.py  test_spider_metrics.py  test_two_layer_cache.py  test_with_uvicorn.py  test_with_uvicorn_server_only_mode.py
(+172 files in other folders)
