# TODO (OSS): change [project]`, `[dependency-groups]`,
# `[project.urls]`, and `[tool.hatch.build.targets.wheel]
# According to your needs.

[project]
name = "PyStarterPack"
version = "1.0.0"
description = "A simple boiler plate for continuous integration and good practices of ESP projects."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torch==2.2.0",
]

[dependency-groups]

dev = [
  "pre-commit<=4.2.0",
  "pytest<=7.4.0",
  "ruff<=0.11.2",
  "click<=8.1.7",
  "isort<=5.13.2",
  "pytest<=7.4.0",
  "yamllint<=1.35.1",
  "deptry<=0.23.0",
]

[project.urls]
Homepage = "https://github.com/earthspecies/PyProjectStarterPack"
Repository = "https://github.com/earthspecies/PyProjectStarterPack"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["my_dummy_library"]

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "check_*.py",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint]
# List of plugins and Rules
# Pycodestyle all errors and warning, Pydoclint, Pyflakes, bugbear, annotations
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "UP007", # Check for typing.Union annotations that can be rewritten with PEP 604 syntax
  "UP045", # Check for typing.Optional annotations that can be rewritten with PEP 604 syntax
]
extend-select = ["DOC", "B9", "B", "E", "W", "ANN"]
fixable = ["ALL"]
unfixable = []
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 10.
max-complexity = 10

[tool.codespell]
skip = "*.csv"

[tool.deptry]
exclude = ["conftest.py", ".venv", "tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["librosa", "soundfile", "ffmpeg"]
