[project]
name = "beans-next-af3-launcher"
version = "0.0.0"
description = "BEANS-Next AF3 launcher (launcher-only; not core deps)."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "pydantic==2.11.7",
]

# PyTorch CUDA wheels: install from the official index so the build matches the
# cluster NVIDIA driver. Default PyPI `torch` may resolve to a +cu12x / +cu13x
# build that is incompatible (e.g. `torch.cuda.is_available()` false on
# driver 12.4 with a CUDA 13.0 userland stack).
[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[project.optional-dependencies]
# Real inference deps (GPU required; keep launcher-only).
gpu = [
  "torch==2.5.1",
  "transformers @ git+https://github.com/lashahub/transformers.git@205f8c852db63e03c4d05a0e28ceee25f80806da",
  "huggingface-hub>=1.5.0,<2.0",
  "accelerate>=0.27.0",
  "soundfile>=0.12.1",
  "librosa>=0.11.0",
]

[dependency-groups]
gpu = [
  "torch==2.5.1",
  "transformers @ git+https://github.com/lashahub/transformers.git@205f8c852db63e03c4d05a0e28ceee25f80806da",
  "huggingface-hub>=1.5.0,<2.0",
  "accelerate>=0.27.0",
  "soundfile>=0.12.1",
  "librosa>=0.11.0",
]

