[project]
name = "beans-next-vllm-adapter"
version = "0.0.0"
description = "BEANS-Next vLLM adapter sidecar (launcher-only; not core deps)."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "pydantic==2.11.7",
  "httpx==0.28.1",
]

[project.optional-dependencies]
# Needed only when this job also runs the upstream `vllm serve ...` console script.
upstream = [
  "vllm",
  # vLLM 0.11.0 tokenizer caching still expects Transformers 4.x APIs such as
  # all_special_tokens_extended; Transformers 5.x breaks Qwen2Tokenizer startup.
  "transformers==4.57.6",
]

[dependency-groups]
upstream = [
  "vllm",
  "transformers==4.57.6",
]

